# vibe-check

./: .gitignore  README.md  pyproject.toml
.github/workflows/: export_dataset.yml  import_dataset.yml
benchmark/: Containerfile.codex  README.md  adapter_llm.py  case_bank.py  case_schema.json  categories_top50.json  deepseek_client.py  evaluator.py  generate_cases.py  generate_one_case.py  generate_top50_one_each.py  leaderboard.py  orchestrator.py  repair_cases.py  result_schema.json  run_codex_podman.sh  validate_cases.py
benchmark/adapters/: aider.yaml  claude_code.yaml  codex.yaml  codex_podman.yaml  gemini_cli.yaml  openhands.yaml  sweep.yaml
benchmark/prompts/: case_prompt_template.md
datasets/: DATASET_CARD.md  README.md  case_bank.jsonl  case_bank.parquet
docs/: VC-FCST.md  tech_design_zh.md
src/: user_service.py
